Bug 1420334 - protect timestamp setting in a critical section, r=michal